Update config.ini x feed

--- a/config.ini
+++ b/config.ini
@@ -32,4 +32,8 @@ name = "mergeRSS"
 url = "https://utgd.net/feed,https://rsshhhub-dachuan.vercel.app/zhihu/people/activities/aliyisheng?code=ee98b264d5c3272d2bf137aaefbf006a,https://rsshhhub-dachuan.vercel.app/zhihu/people/activities/piao-shi-yu"
 max_items = "0"
 
+[source006]
+name = "XFeed"
+url = "https://rss.solidunk.top/twitter/user/huangyun_122, https://rss.solidunk.top/twitter/user/onenewbite, https://rss.solidunk.top/twitter/user/yihong0618, https://rss.solidunk.top/twitter/user/kepano, https://rss.solidunk.top/twitter/user/nishuang, https://rss.solidunk.top/twitter/user/cncnlhc, https://rss.solidunk.top/twitter/user/dotey, https://rss.solidunk.top/twitter/user/xiaohuggg, https://rss.solidunk.top/twitter/user/vista8, https://rss.solidunk.top/twitter/user/alexxubyte"
+max_items = "0"
 
