Update config.ini new x feed from rss.app

--- a/config.ini
+++ b/config.ini
@@ -34,6 +34,6 @@ max_items = "0"
 
 [source006]
 name = "XFeed"
-url = "https://rss.solidunk.top/twitter/user/huangyun_122, https://rss.solidunk.top/twitter/user/onenewbite, https://rss.solidunk.top/twitter/user/yihong0618, https://rss.solidunk.top/twitter/user/kepano, https://rss.solidunk.top/twitter/user/nishuang, https://rss.solidunk.top/twitter/user/cncnlhc, https://rss.solidunk.top/twitter/user/dotey, https://rss.solidunk.top/twitter/user/xiaohuggg, https://rss.solidunk.top/twitter/user/vista8, https://rss.solidunk.top/twitter/user/alexxubyte"
+url = "https://rss.app/feeds/ZT9Q3cA6XmH2oOOk.xml, https://rss.app/feeds/CrAA7uGbmp6X9nWH.xml, https://rss.app/feeds/OUdZslJpJ916YUBy.xml, https://rss.app/feeds/rW7nuuOHEC4JbrxN.xml, https://rss.app/feeds/lrSQttV5sfdBi63K.xml, https://rss.app/feeds/tCtKCMjwKVcmbAS0.xml, https://rss.app/feeds/Tbvp0DKCBZy6PIem.xml, https://rss.app/feeds/7q2ffPciI53zLlnF.xml, https://rss.app/feeds/gTdmz3zJPvWOdKrx.xml, https://rss.app/feeds/g6chE142hYeu73sm.xml"
 max_items = "0"
 
